// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ReactionsRowButton > renders the default reaction button 1`] = `
<div>
  <button
    class="reactionsRowButton"
    tabindex="0"
    type="button"
  >
    <span
      aria-hidden="true"
      class="reactionsRowButtonContent"
    >
      👍
    </span>
    <span
      aria-hidden="true"
      class="reactionsRowButtonCount"
    >
      2
    </span>
  </button>
</div>
`;

exports[`ReactionsRowButton > renders the selected reaction button 1`] = `
<div>
  <button
    class="reactionsRowButton reactionsRowButtonSelected"
    tabindex="0"
    type="button"
  >
    <span
      aria-hidden="true"
      class="reactionsRowButtonContent"
    >
      👍
    </span>
    <span
      aria-hidden="true"
      class="reactionsRowButtonCount"
    >
      2
    </span>
  </button>
</div>
`;
